Add ability to fuzz bootstrap classes in Android (#737)