@@ -26,6 +26,7 @@ import static java.util.stream.Collectors.toSet;
 
 import com.code_intelligence.jazzer.driver.Driver;
 import com.code_intelligence.jazzer.utils.Log;
+import com.code_intelligence.jazzer.utils.ZipUtils;
 import com.github.fmeum.rules_jni.RulesJni;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -265,7 +266,42 @@ public class Jazzer {
     return Paths.get(System.getProperty("java.home"), "bin", javaBinaryName);
   }
 
-  private static Stream<String> javaBinaryArgs() {
+  private static Stream<String> javaBinaryArgs() throws IOException {
+    if (IS_ANDROID) {
+      // Add Android specific args
+      Path agentPath =
+          RulesJni.extractLibrary("android_native_agent", "/com/code_intelligence/jazzer/android");
+
+      String jazzerAgentPath = System.getProperty("jazzer.agent_path");
+      String bootclassClassOverrides =
+          System.getProperty("jazzer.android_bootpath_classes_overrides");
+
+      String jazzerBootstrapJarPath =
+          "com/code_intelligence/jazzer/android/jazzer_bootstrap_android.jar";
+      String jazzerBootstrapJarOut = "/data/local/tmp/jazzer_bootstrap_android.jar";
+
+      try {
+        ZipUtils.extractFile(jazzerAgentPath, jazzerBootstrapJarPath, jazzerBootstrapJarOut);
+      } catch (IOException ioe) {
+        Log.error(
+            "Could not extract jazzer_bootstrap_android.jar from Jazzer standalone agent", ioe);
+        exit(1);
+      }
+
+      String nativeAgentOptions = "injectJars=" + jazzerBootstrapJarOut;
+      if (bootclassClassOverrides != null && !bootclassClassOverrides.isEmpty()) {
+        nativeAgentOptions += ",bootstrapClassOverrides=" + bootclassClassOverrides;
+      }
+
+      // ManagementFactory wont work with Android
+      Stream<String> stream =
+          Stream.of("-cp", System.getProperty("java.class.path"), "-Xplugin:libopenjdkjvmti.so",
+              "-agentpath:" + agentPath.toString() + "=" + nativeAgentOptions, "-Xcompiler-option",
+              "--debuggable", "-Djdk.attach.allowAttachSelf=true", Jazzer.class.getName());
+
+      return stream;
+    }
+
     Stream<String> stream = Stream.of("-cp", System.getProperty("java.class.path"),
         // Make ByteBuddyAgent's job simpler by allowing it to attach directly to the JVM
         // rather than relying on an external helper. The latter fails on macOS 12 with JDK 11+
@@ -276,11 +312,6 @@ public class Jazzer {
         // Presumably, this issue is caused by codesigning and the exec helper missing the
         // entitlements required for library insertion.
         "-Djdk.attach.allowAttachSelf=true", Jazzer.class.getName());
-
-    if (IS_ANDROID) {
-      // ManagementFactory wont work with Android
-      return stream;
-    }
 
     return Stream.concat(ManagementFactory.getRuntimeMXBean().getInputArguments().stream(), stream);
   }
